--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,18 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-  "next": "15.5.0",
-  "react": "19.1.1",
-  "react-dom": "19.1.1",
-  "@reduxjs/toolkit": "2.8.2",
-  "react-redux": "9.2.0",
-  "redux-persist": "6.0.0",
-  "axios": "1.11.0"
-},
-"devDependencies": {
-  "eslint": "9.34.0",
-  "@eslint/eslintrc": "3.3.1",
-  "eslint-config-next": "15.5.0"
-}
-
+    "@reduxjs/toolkit": "^2.8.2",
+    "axios": "1.11.0",
+    "next": "15.5.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "react-redux": "^9.2.0",
+    "redux-persist": "6.0.0"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "3.3.1",
+    "eslint": "9.34.0",
+    "eslint-config-next": "15.5.0"
+  }
 }
