--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.17.1",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
     "pdf-creator-node": "^2.3.5",
     "pdfkit": "^0.17.1"
